src/objects/AMA_Agreement_Detail__c.object
<CustomObject>
    <fields>
        <fullName>AMA_Amount_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To track the history of AMA amount to be credited/billed and show in billing reports</description>
        <label>AMA Amount Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TPA_AMA_Agreement_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AMA_Amount_Modified_On__c</fullName>
        <description>To track the history of AMA amount to be credited/billed and show in billing reports</description>
        <label>AMA Amount Modified On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AMA_Amount_to_be_Credited_Billed__c</fullName>
        <description>field need to be editable and updated when a fee needs to be changed after “In Effect” and reportable in the auto-generated Finance Billing Report.</description>
        <label>AMA Amount to be Credited/Billed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AMA_Dist_ana_Mail_Atrr_For_Template__c</fullName>
        <label>AMA Dist ana Mail Atrr For Template</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AMA_Distribution_And_Mailing_Attributes__c</fullName>
        <label>What will the mailing contain?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing Materials</fullName>
                </value>
                <value>
                    <fullName>Personalized Letters</fullName>
                </value>
                <value>
                    <fullName>Publication</fullName>
                </value>
                <value>
                    <fullName>Journal</fullName>
                </value>
                <value>
                    <fullName>Clinical Studies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AMA_Foreign_Storage_Amount_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AMA Foreign Storage Amount Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TPA_AMA_Agreement_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AMA_Foreign_Storage_Amount_Modified_On__c</fullName>
        <label>AMA Foreign Storage Amount Modified On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AMA_Foreign_Storage_Amount_to_be_Credite__c</fullName>
        <label>AMA Foreign Storage Amount to be Credite</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AMA_Foreign_Storage_Contract_Type__c</fullName>
        <label>AMA Foreign Storage Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Service Bureau I Foreign License</fullName>
                </value>
                <value>
                    <fullName>Lettershop Foreign License</fullName>
                </value>
                <value>
                    <fullName>Service Bureau II Foreign License</fullName>
                </value>
                <value>
                    <fullName>Contract Sales Force Foreign License</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AMA_HowResponseDataCollected__c</fullName>
        <label>How will the response data be collected?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Telephone Number</fullName>
                </value>
                <value>
                    <fullName>Website Replies</fullName>
                </value>
                <value>
                    <fullName>Business Reply Mail</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AMA_Howlong_SP_has_Data_Access__c</fullName>
        <label>How long will SP have access to Data</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Greater than 90 days</fullName>
                </value>
                <value>
                    <fullName>90 days or less</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AMA_Manual_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AMA Manual Review?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AMA_Manual_Trigger_Reasons__c</fullName>
        <label>AMA Manual Trigger Reasons</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AMA Contract End date not determined</fullName>
                </value>
                <value>
                    <fullName>AMA Contract Type cannot be determined</fullName>
                </value>
                <value>
                    <fullName>Client/Vendor not found in AMA Crosswalk</fullName>
                </value>
                <value>
                    <fullName>Client&apos;s ama agreement is expired</fullName>
                </value>
                <value>
                    <fullName>Client does not have an AMA agreement</fullName>
                </value>
                <value>
                    <fullName>Multiple AMA contracts types are TRUE</fullName>
                </value>
                <value>
                    <fullName>SBII &amp; Vendor has CSF,Medical,Healthcare</fullName>
                </value>
                <value>
                    <fullName>Vendor has CSF with multiple DBLS</fullName>
                </value>
                <value>
                    <fullName>Vendor has SBII with multiple DBLS</fullName>
                </value>
                <value>
                    <fullName>Vendor requires offshore approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AMA_Market_Research_Attributes_For_Templ__c</fullName>
        <label>AMA Market Research Attributes For Templ</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AMA_Market_Research_Attributes__c</fullName>
        <label>Description of market research project</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AMA_PPDVariablesCollected__c</fullName>
        <label>AMA Variable Collected</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Physician Name</fullName>
                </value>
                <value>
                    <fullName>Office Address</fullName>
                </value>
                <value>
                    <fullName>Specialty</fullName>
                </value>
                <value>
                    <fullName>Hospital Address</fullName>
                </value>
                <value>
                    <fullName>Telephone Number</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AMA_Prebill_Report__c</fullName>
        <formula>IF( AND( !ISBLANK(Current_Year_Fees__c),Billed_in_Advance__c) , HYPERLINK(&quot;/apex/VFP_TPA_AMA_Child_PreBill_Report?id=&quot;&amp;Id&amp;&quot;&amp;reqId=&quot;&amp;Id&amp;&quot;&amp;type=vpsubmit&amp;action=acc&quot;, 
 IMAGE(&quot;/resource/AMA_PreBillButton&quot;, &quot;PreBill report Button&quot;), &quot;_self&quot;), null)</formula>
        <label>Create AMA Pre-bill Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMA_Project_Uses_Value__c</fullName>
        <description>Created under ER-3947</description>
        <label>AMA Project Uses Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AMA_Renewal_Cancellation_Acknowledged_On__c</fullName>
        <label>AMA Renewal Cancellation Acknowledged On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AMA_RepDataCollectedOtherWay__c</fullName>
        <label>Other Response Data Collected</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AMA_RespDataAction__c</fullName>
        <label>Response Data Destroyed or Returned</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Returned to IMS</fullName>
                </value>
                <value>
                    <fullName>Returned to Client</fullName>
                </value>
                <value>
                    <fullName>Destroyed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AMA_Response__c</fullName>
        <description>Created under ER-3947</description>
        <label>AMA Response:</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Offshore Consent request approved</fullName>
                </value>
                <value>
                    <fullName>Additional questions for Vendor requested by AMA</fullName>
                </value>
                <value>
                    <fullName>Offshore request not approved by AMA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AMA_Services_Provided__c</fullName>
        <label>AMA Project Use(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AMA_TypeOfPrescriberLevelData__c</fullName>
        <label>AMA Variables Requested</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Address Type</fullName>
                </value>
                <value>
                    <fullName>AMA UPIN Data</fullName>
                </value>
                <value>
                    <fullName>Birth Year</fullName>
                </value>
                <value>
                    <fullName>Census Data Codes</fullName>
                </value>
                <value>
                    <fullName>Gender Code</fullName>
                </value>
                <value>
                    <fullName>Geographic Codes</fullName>
                </value>
                <value>
                    <fullName>Graduate Medical Training</fullName>
                </value>
                <value>
                    <fullName>Graduation Data</fullName>
                </value>
                <value>
                    <fullName>Historical Licensure Data</fullName>
                </value>
                <value>
                    <fullName>Hospital Affiliation</fullName>
                </value>
                <value>
                    <fullName>M.D., D.O. Indicator</fullName>
                </value>
                <value>
                    <fullName>Major Professional Activity</fullName>
                </value>
                <value>
                    <fullName>ME #</fullName>
                </value>
                <value>
                    <fullName>Medical Education Number (ME#)</fullName>
                </value>
                <value>
                    <fullName>Name</fullName>
                </value>
                <value>
                    <fullName>No Contact Indicator</fullName>
                </value>
                <value>
                    <fullName>NPI Number</fullName>
                </value>
                <value>
                    <fullName>Office Address</fullName>
                </value>
                <value>
                    <fullName>Physician Recognition Award Recipients</fullName>
                </value>
                <value>
                    <fullName>Preferred Mailing Address</fullName>
                </value>
                <value>
                    <fullName>Present Employment</fullName>
                </value>
                <value>
                    <fullName>Presumed Dead Flag</fullName>
                </value>
                <value>
                    <fullName>Primary Office Address</fullName>
                </value>
                <value>
                    <fullName>Speciality – Primary Secondary</fullName>
                </value>
                <value>
                    <fullName>Telephone Number</fullName>
                </value>
                <value>
                    <fullName>Type of Practice</fullName>
                </value>
                <value>
                    <fullName>Undeliverable Address Flag</fullName>
                </value>
                <value>
                    <fullName>Fax Number</fullName>
                </value>
                <value>
                    <fullName>License State Abbreviation</fullName>
                </value>
                <value>
                    <fullName>PDRP Flag</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AMA_U_S_On_Hold_List__c</fullName>
        <formula>TEXT(TPA_Request__r.Service_Provider_Address__r.AMA_Check_List__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AMA U.S. On Hold List</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMA_reasons_why_offshore_not_approved__c</fullName>
        <description>Created under ER-3947</description>
        <inlineHelpText>Reasons provided by AMA for not approving offshore request</inlineHelpText>
        <label>AMA reasons why offshore not approved</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Activated_for_SAP_Report__c</fullName>
        <description>Created under ER-3534</description>
        <label>Activated for SAP Report</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Additional_technologies_used__c</fullName>
        <inlineHelpText>Are there any additional technologies used to prevent network-based data leakage from offshore entities environment?</inlineHelpText>
        <label>Additional technologies used</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_End_Date__c</fullName>
        <label>Agreement Final End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_File_Name__c</fullName>
        <formula>IF((NOT(ISBLANK(Vendor_Legal_Name__c)) &amp;&amp; LEN(Vendor_Legal_Name__c)&gt; 15),MID(Vendor_Legal_Name__c, 0, 15),Vendor_Legal_Name__c)+&apos;_&apos;+ $Label.TPA_TLLA +&apos;_&apos;+
IF((LEN(Client__c) &gt;  10), 
 MID(Client__c, 0, 10),Client__c)+&apos;_&apos;+TPA_Request__r.Name+&apos;_&apos;+ TEXT(TPA_Request__r.Secondary_Client_Contact_Territory__c)
+&apos;_&apos;+TEXT(YEAR(TODAY()))</formula>
        <label>Agreement File Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Name__c</fullName>
        <formula>TPA_Request__r.Agreement_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Start_Date__c</fullName>
        <label>Agreement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Start_Date_text__c</fullName>
        <formula>CASE(Month(Agreement_Start_Date__c), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;None&quot;)&amp; &quot; &quot; &amp;  TEXT(YEAR(Agreement_Start_Date__c))</formula>
        <label>Agreement Start Date text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Renew_Y_N__c</fullName>
        <formula>IF( Agreement_End_Date__c &gt; Initial_Termination_Date__c, &apos;Y&apos;, &apos;N&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auto-Renew (Y/N)?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billed_in_Advance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Implemented under ER-12313</description>
        <label>Billed in Advance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Can_data_be_downloaded_or_printed__c</fullName>
        <inlineHelpText>Data security procedures: Can data be downloaded or printed? (If No, please describe what technical controls are used)</inlineHelpText>
        <label>Can data be downloaded or printed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_AMA_Manually_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client AMA Manually Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Company_Name__c</fullName>
        <formula>TPA_Request__r.Client_Address__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Contact_Name__c</fullName>
        <description>created under ER-3196</description>
        <formula>TPA_Request__r.ClientContact__r.FirstName +&apos; &apos;+ TPA_Request__r.ClientContact__r.LastName</formula>
        <label>Client Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Employee_Store_Data_in_country__c</fullName>
        <label>Client Employee Store Data in country</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Cayman Islands</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Congo</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <formula>TPA_Request__r.Client_Address__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_req_Storage_Permission_from_NonUS__c</fullName>
        <description>Does Client store the prescriber level IQVIA data outside of the United States:</description>
        <inlineHelpText>Does Client store the prescriber level IQVIA data outside of the United States:</inlineHelpText>
        <label>Client req Storage Permission from NonUS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>AMA Contract Type Provided:</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lettershop</fullName>
                </value>
                <value>
                    <fullName>Service Bureau I</fullName>
                </value>
                <value>
                    <fullName>Service Bureau II</fullName>
                </value>
                <value>
                    <fullName>Contract Sales Force</fullName>
                </value>
                <value>
                    <fullName>Existing Agreement</fullName>
                </value>
                <value>
                    <fullName>Rx Pharmaceutical</fullName>
                </value>
                <value>
                    <fullName>Website Operations</fullName>
                </value>
                <value>
                    <fullName>Medical/Diagnostic Equipment &amp; Supply</fullName>
                </value>
                <value>
                    <fullName>Healthcare Provider</fullName>
                </value>
                <value>
                    <fullName>Physician Specific Analytics</fullName>
                </value>
                <value>
                    <fullName>Data Hosting</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>SBII Amendment</fullName>
                </value>
                <value>
                    <fullName>CSF Amendment</fullName>
                </value>
                <value>
                    <fullName>DSF</fullName>
                </value>
                <value>
                    <fullName>Database Licensee</fullName>
                </value>
                <value>
                    <fullName>LS ExUS Entity Foreign License</fullName>
                </value>
                <value>
                    <fullName>SBI ExUS Entity Foreign License</fullName>
                </value>
                <value>
                    <fullName>SBII ExUS Entity Foreign License</fullName>
                </value>
                <value>
                    <fullName>Emerging Market - Large</fullName>
                </value>
                <value>
                    <fullName>Emerging Market - Mid</fullName>
                </value>
                <value>
                    <fullName>Healthcare Provider - Limited</fullName>
                </value>
                <value>
                    <fullName>Pre-Commercial</fullName>
                </value>
                <value>
                    <fullName>PSA - Service Bureau</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Year_Fees__c</fullName>
        <label>Current Year Fees</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_Invoice__c</fullName>
        <label>Current Year Invoice</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Year__c</fullName>
        <formula>TEXT(YEAR( TPA_Request__r.Data_Access_Start_Date__c ))</formula>
        <label>Current Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBL__c</fullName>
        <label>DBL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acxiom Corporation (AC)</fullName>
                </value>
                <value>
                    <fullName>MH Health (MH)</fullName>
                </value>
                <value>
                    <fullName>DMD Marketing Corp (DMD)</fullName>
                </value>
                <value>
                    <fullName>Redi-Mail Direct Marketing, Inc. &amp; Redi-Data (REDI)</fullName>
                </value>
                <value>
                    <fullName>Source Healthcare Analytics (SHA)</fullName>
                </value>
                <value>
                    <fullName>J. Knipper &amp; Co., Inc. (JKC)</fullName>
                </value>
                <value>
                    <fullName>Medical Marketing Service, Inc. (MMS)</fullName>
                </value>
                <value>
                    <fullName>Synergistix, Inc. (SYN)</fullName>
                </value>
                <value>
                    <fullName>Veeva Systems, Inc. (​VSI)</fullName>
                </value>
                <value>
                    <fullName>Express Scripts, Inc. (EXS)</fullName>
                </value>
                <value>
                    <fullName>Qpharma Inc. (QPI)</fullName>
                </value>
                <value>
                    <fullName>IQVIA (IQVIA)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_security_procedures_used__c</fullName>
        <inlineHelpText>What data security procedures will be in place?</inlineHelpText>
        <label>Data security procedures used</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Agreement_Activated__c</fullName>
        <description>Date Agreement Activated (returned signed)</description>
        <label>Date Agreement Activated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_AMA_Response_for_Offshore__c</fullName>
        <description>Created under ER-3947</description>
        <label>Date of AMA Response for Offshore</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_vendor_responded_for_offshore__c</fullName>
        <description>Created under ER-3947</description>
        <label>Date vendor responded for offshore</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employees_have_wireless_connectivity__c</fullName>
        <inlineHelpText>Physical security procedures: Do employees have wireless connectivity?</inlineHelpText>
        <label>Employees have wireless connectivity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Encryption__c</fullName>
        <inlineHelpText>Data security procedures : Encryption (In transit/motion and at rest)?</inlineHelpText>
        <label>Encryption</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExUS_Entity_Authorized_Signer_Name__c</fullName>
        <formula>Ex_US_Entity_Authorized_Signer_FName__c &amp; &apos; &apos; &amp; Ex_US_Entity_Authorized_Signer_LName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ExUS Entity Authorized Signer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ex_Client_Services_On_Behalf_Of__c</fullName>
        <label>Client Services - On Behalf Of</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ex_Client__c</fullName>
        <label>Client</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ex_Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ex_Contract_List_Type__c</fullName>
        <label>Contract List Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ex_Contract_Type__c</fullName>
        <label>AMA Existing Contract Type Found:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ex_DBL__c</fullName>
        <label>DBL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ex_Max_Fee_Reached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Max Fee Reached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ex_Offshore_Access__c</fullName>
        <label>Offshore Access</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ex_Offshore_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offshore Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ex_Offshore_Location__c</fullName>
        <label>Offshore Location</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ex_Offshore_Storage__c</fullName>
        <label>Offshore Storage</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ex_Special_Terms_Conditions__c</fullName>
        <label>Special Terms/Conditions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ex_TPA_AMA_Contract_Detail_Name__c</fullName>
        <label>TPA AMA Contract Detail Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ex_TPA_AMA_Contract_Detail__c</fullName>
        <description>Refers to existing ama contract detail record</description>
        <label>TPA AMA Contract Detail Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ex_US_Entity_Authorized_Signer_Email__c</fullName>
        <label>Ex-US Entity Authorized Signer Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ex_US_Entity_Authorized_Signer_FName__c</fullName>
        <label>ExUS Entity Authorized Signer First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ex_US_Entity_Authorized_Signer_LName__c</fullName>
        <label>ExUS Entity Authorized Signer Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ex_US_Entity_Authorized_Signer_Title__c</fullName>
        <label>Ex-US Entity Authorized Signer Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ex_US_Foreign_Affiliate_of_TPA_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ex-US Foreign Affiliate of TPA Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ex_US_Legal_Entity_Name_Offshore_Storage__c</fullName>
        <label>Ex-US Legal Entity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ex_US_Legal_Entity_Name_Remote_Access__c</fullName>
        <label>Ex-US Legal Entity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ex_US_Legal_Entity_Name__c</fullName>
        <label>Ex-US Legal Entity Name:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Reduced__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Fee Reduced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fee_Rule_Contract_Type__c</fullName>
        <label>AMA Contract Type Rule Applied:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Rule_Fee_Calculated__c</fullName>
        <label>Fee Calculated?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Rule_Fee__c</fullName>
        <label>Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>